<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back_orange" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar_new_password"
            style="@style/ProgressGrapefruit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pass_changed_successfully"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:text="@string/password_changed_successfully"
            android:textColor="@color/new_gray2"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/logo_go_in"
            android:tint="@color/grapefruit2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/new_password"
            android:theme="@style/EditTextTheme"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/title">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_layout_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:inputType="textWebPassword"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="13sp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_password"
            android:theme="@style/EditTextTheme"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/your_pass_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_layout_confirm_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:inputType="textWebPassword"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="13sp"
                android:theme="@style/EditTextTheme"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/your_pass_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:text="@string/your_password_must_contain"
            android:textColor="@color/grapefruit2"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPass" />


        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/pin_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:fontFamily="@font/quicksand_medium"
            android:inputType="number"
            android:maxLength="6"
            android:imeOptions="actionDone"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="13sp"
            android:theme="@style/EditTextTheme"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirm"
            custom:pinAnimationType="popIn"
            custom:pinCharacterSpacing="16dp"
            custom:pinLineStroke="1sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:text="@string/pin_text"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            custom:layout_constraintEnd_toEndOf="@+id/guideline_right"
            custom:layout_constraintHorizontal_bias="0.0" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_new_password"
            style="@style/button_orange_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:alpha="0.4"
            android:enabled="false"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/save_new_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/pin_edit_text" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_constraints_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btn_save_new_password,
        textInputLayoutPass,
        textInputLayoutConfirm, pin_edit_text,
        title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>