<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgot_password_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:navigationIcon="@drawable/ic_arrow_back_orange">

    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/logo_go_in"
            android:tint="@color/grapefruit2"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/fill_your_email_below"
            android:textAlignment="center"
            android:textSize="14sp"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressGrapefruit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:visibility="gone"
            android:progressTint="@color/grapefruit"
            android:indeterminateTint="@color/grapefruit2"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintLeft_toLeftOf="parent"
            custom:layout_constraintRight_toRightOf="parent"
            custom:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:theme="@style/EditTextTheme"
            custom:errorEnabled="true"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toBottomOf="@+id/description_text">

            <EditText
                android:id="@+id/login_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/send_button"
            style="@style/button_orange_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.4"
            android:text="@string/send"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toBottomOf="@+id/edit_view" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/form_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            custom:constraint_referenced_ids="send_button, edit_view, description_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>