<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="title_choose_profile_picture,
            profile_picture_field, btn_choose_photo" />

        <ProgressBar
            android:id="@+id/progress_bar_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:theme="@style/ProgressGrapefruit2"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="80dp"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/logo_go_in"
            android:tint="@color/grapefruit2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/title_choose_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:text="@string/profile_picture"
            android:textColor="@color/new_gray2"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profile_picture_field"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:background="@color/lightSilver"
            android:layout_marginTop="32dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/title_choose_profile_picture"
            app:riv_corner_radius="100dp"
            app:riv_mutate_background="true"
            app:riv_oval="false" />

        <ImageView
            android:id="@+id/icon_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:src="@drawable/icon_portrait"
            app:layout_constraintBottom_toBottomOf="@+id/profile_picture_field"
            app:layout_constraintEnd_toEndOf="@id/profile_picture_field"
            app:layout_constraintStart_toStartOf="@+id/profile_picture_field"
            app:layout_constraintTop_toTopOf="@+id/profile_picture_field" />


        <Button
            android:id="@+id/btn_choose_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_orange_style"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/choose_photo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar_preview" />


        <Button
            android:id="@+id/btn_save_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_orange_style"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/save_photo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/btn_choose_photo" />


        <Button
            android:id="@+id/btn_choose_not_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:fontFamily="@font/quicksand_medium"
            android:stateListAnimator="@null"
            android:text="@string/not_now"
            android:textAllCaps="false"
            android:textColor="@color/grapefruit"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/btn_save_photo" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="38dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="38dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>